cmake_minimum_required(VERSION 3.0.2)
project(robile_slam)
find_package(catkin REQUIRED)

###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES robile_slam
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

###########
## Build ##
###########
include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)

